syntax = "proto3";
package taskflow.proto;
import "model/task.proto";
import "model/jsonmap.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
option java_package = "cn.feiliu.taskflow.proto";
option java_outer_classname = "FlowModelPb";
//option java_multiple_files = true;

message WorkflowRun {

  enum Status {
    RUNNING = 0;
    COMPLETED = 1;
    FAILED = 2;
    TIMED_OUT = 3;
    TERMINATED = 4;
    PAUSED = 5;
  }
  Status status = 1;
  string workflow_id = 2;
  string correlation_id = 3;
  string request_id = 4;
  int32 priority = 5;
  taskflow.proto.JsonMap variables = 6;

  int64 create_time = 7;
  int64 updated_time = 8;
  string created_by = 9;

  taskflow.proto.JsonMap input = 10;
  taskflow.proto.JsonMap output = 11;

  repeated taskflow.proto.Task tasks = 12;
}
//workflow
message StartWorkflowRequest {
  /*工作流名称(必填)*/
  string name = 1;
  /*工作流版本(选填：缺省值则最新版本)*/
  int32 version = 2;
  /*业务关联ID(选填)*/
  string correlation_id = 3;
  map<string, google.protobuf.Value> input = 4;
  map<string, string> task_to_domain = 5;
  string external_input_payload_storage_path = 7;
  int32 priority = 8;
  string created_by = 9;
  //幂等性类型
  string idempotencyKey = 10;
  IdempotencyStrategy idempotencyStrategy = 11;
  string requestId = 12;

  enum IdempotencyStrategy {
    NONE = 0;
    FAIL = 1;
    RETURN_EXISTING = 2;
  }
}

message StartWorkflowResponse {
  WorkflowRun workflow = 1;
  string requestId = 2;
  Error error = 3;
}

message Error {
  int32  code = 1;
  string message = 2;
}
