syntax = "proto3";
package feiliu.grpc.service;
import "model/task.proto";
import "model/workflow.proto";
option java_package = "cn.feiliu.taskflow.grpc";
option java_outer_classname = "TfStreamServPb";
option go_package = "github.com/netflix/conductor/client/gogrpc/conductor/grpc/tasks";

service TaskflowStreamService {
  rpc StartWorkflow(stream taskflow.proto.StartWorkflowRequest) returns (stream taskflow.proto.StartWorkflowResponse) {}
  // /poll/batch/{tasktype}
  rpc BatchPoll(taskflow.proto.BatchPollRequest) returns (stream taskflow.proto.Task);
}


